styles/cart.css
.containerCart {
  margin: 20px;

}
.cart-title {
  color: #001a1e;
  font-weight: bold;
  font-size: 40px;
}
.cartDevices {
  padding: 10px;
  border-radius: 12px;
  box-shadow: 4px 7px 7px #3635351a, -4px -7px 7px #3635351a;
  transition: all 0.6s ease-in-out;
  margin: 10px 0;
}
.itemAddDetails {
  display: flex;
  flex-direction: column;
  gap: 2em;
}
.eleTitle {
  text-align: end !important;
}
.delete-from-cart {
  color: rgb(192, 24, 24);
  font-size: 1em;
  transition: all 0.3s ease-in-out;
}
.delete-from-cart:hover {
  cursor: pointer;
  text-shadow: #727272 6px 6px 10px;
  color: red;
}
.cart-popup {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background-color: #b1323c !important;
  color: white;
  padding: 15px 25px;
  border-radius: 5px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  z-index: 1000;
  display: none;
  align-items: center;
  gap: 10px;
  animation: slideIn 0.5s, fadeOut 0.5s 2.5s forwards;
}

.popup-icon {
  font-size: 24px;
  font-weight: bold;
  display: inline-block;
  text-align: end;
  width: 100%;
}
.cartItems {
  display: flex;
  width: 100%;
  gap: 2em;
  margin: 0 10px;
  flex-wrap: wrap;
}
.electronicsImage {
  width: 140px !important;
  height: 200px !important;
}
.incOrDec {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;
  width: 100px;
  font-size: 20px;
  color: #004956;
  font-weight: bold;
}
.incOrDec button {
  color: #b0c7cb;
  border: none;
  border-radius: 5px;
  font-size: 23.33px;
}

@keyframes slideIn {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}
@media screen and (min-width: 1092px) {
  .containerCart {
    margin: 20px 10em;
    display: grid;
    grid-template-columns: 70% 350px;
    justify-content: center;
    align-items: center;
  }
}

